@@ -346,6 +346,13 @@ $email_send_options =
 # can be changed dynamically on the view topic screen.
 $default_tabwidth = 8;
 
+# Indicate whether the diffs presented in a topic should be ordered by
+# filename.  For some deployments, it is important that the order of the
+# diffs are presented in the same order as it was in the file.  For other
+# deployments, apparently Subversion can returns diffs in an arbitrary
+# order, so setting this to '1' would be useful.
+$sort_diffs_by_filename = 0;
+
 # Bug database to update.  Currently, Bugzilla, Flyspray and TestDirector
 # are supported, but it is straight-forward to support other bug
 # databases.  To enable Bugzilla, set $bug_db to "bugzilla", and set
